[gd_scene load_steps=24 format=3 uid="uid://cp1jpflbn7pn3"]

[ext_resource type="Script" path="res://Jefe.gd" id="1_65mib"]
[ext_resource type="Texture2D" uid="uid://bbnkb3tqub5os" path="res://Agis/Agis.png" id="1_dob88"]
[ext_resource type="Texture2D" uid="uid://cvr4cdsh2rj2q" path="res://Circulo.png" id="3_6eu7t"]
[ext_resource type="Texture2D" uid="uid://cg151v66245ns" path="res://icon.svg" id="3_jaagy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_56dqy"]
atlas = ExtResource("1_dob88")
region = Rect2(0, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uoys"]
atlas = ExtResource("1_dob88")
region = Rect2(224, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvv2c"]
atlas = ExtResource("1_dob88")
region = Rect2(448, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_v10gg"]
atlas = ExtResource("1_dob88")
region = Rect2(672, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnku6"]
atlas = ExtResource("1_dob88")
region = Rect2(896, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b85c"]
atlas = ExtResource("1_dob88")
region = Rect2(1120, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeu4l"]
atlas = ExtResource("1_dob88")
region = Rect2(1344, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4kbf"]
atlas = ExtResource("1_dob88")
region = Rect2(1568, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eft3"]
atlas = ExtResource("1_dob88")
region = Rect2(1792, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfvyc"]
atlas = ExtResource("1_dob88")
region = Rect2(2016, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_par4p"]
atlas = ExtResource("1_dob88")
region = Rect2(2240, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa83l"]
atlas = ExtResource("1_dob88")
region = Rect2(2464, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyoyj"]
atlas = ExtResource("1_dob88")
region = Rect2(2688, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyb47"]
atlas = ExtResource("1_dob88")
region = Rect2(2912, 0, 224, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyj8y"]
atlas = ExtResource("1_dob88")
region = Rect2(3136, 0, 224, 240)

[sub_resource type="SpriteFrames" id="SpriteFrames_1hond"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_56dqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uoys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvv2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v10gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnku6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b85c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeu4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4kbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eft3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfvyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_par4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa83l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyoyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyb47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyj8y")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uf5m2"]
size = Vector2(180, 214)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6icn"]
size = Vector2(124, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ne1d"]
size = Vector2(458, 125)

[node name="Nivel" type="Node2D"]

[node name="Jefe" type="Node2D" parent="."]
position = Vector2(-11, -120)
script = ExtResource("1_65mib")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Jefe"]
sprite_frames = SubResource("SpriteFrames_1hond")
animation = &"Idle"
frame_progress = 0.166772

[node name="Area2D" type="Area2D" parent="Jefe"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jefe/Area2D"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_uf5m2")

[node name="Timer" type="Timer" parent="Jefe"]
wait_time = 0.5
autostart = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="Jefe"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -205.0
offset_right = 422.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
max_value = 5.0
value = 3.0
texture_under = ExtResource("3_6eu7t")
texture_progress = ExtResource("3_6eu7t")
tint_under = Color(0.61339, 0.61339, 0.61339, 1)

[node name="Plataforma" type="StaticBody2D" parent="."]
position = Vector2(156, -183)
collision_layer = 8
collision_mask = 2

[node name="Icon" type="Sprite2D" parent="Plataforma"]
modulate = Color(0, 0, 0, 1)
position = Vector2(1.0842e-19, 4)
scale = Vector2(0.953125, 0.09375)
texture = ExtResource("3_jaagy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataforma"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_s6icn")

[node name="Plataforma2" type="StaticBody2D" parent="."]
position = Vector2(-1, -2)
collision_layer = 4
collision_mask = 2

[node name="Icon" type="Sprite2D" parent="Plataforma2"]
modulate = Color(0, 0, 0, 1)
position = Vector2(1.0842e-19, 59.5)
scale = Vector2(3.5625, 0.960937)
texture = ExtResource("3_jaagy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plataforma2"]
position = Vector2(0, 58.5)
shape = SubResource("RectangleShape2D_1ne1d")

[connection signal="body_entered" from="Jefe/Area2D" to="Jefe" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Jefe/Area2D" to="Jefe" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Jefe/Timer" to="Jefe" method="_on_timer_timeout"]
